[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "performing-arts-monitor"
version = "0.1.0"
description = "Daily Korean musical and performing arts monitor powered by Gemini and GitHub Actions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "google-genai>=1.66.0",
  "python-dateutil>=2.9.0",
  "requests>=2.32.0",
]

[project.scripts]
performing-arts-monitor = "performing_arts_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
